--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Website for Revolve Coaching",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:lambda": "netlify-lambda serve functions",
+    "build:lambda": "netlify-lambda build functions"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,10 @@
   "homepage": "https://github.com/gitbush/revolve_coaching#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.0",
+    "netlify-lambda": "^2.0.2",
+    "sib-api-v3-sdk": "^8.0.2"
   }
 }
